--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 							<div class="col-12">
 
 								<header id="header">
-									<h1><a href="index.html" id="logo">Minimaxing</a></h1>
+									<h1><a href="index.html" id="logo">Tianran Zhang</a></h1>
 									<nav id="nav">
-										<a href="index.html" class="current-page-item">Homepage</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
-										<a href="threecolumn.html">Three Column</a>
+										<a href="index.html" class="current-page-item">About me</a>
+										<a href="twocolumn1.html">Research</a>
+										<a href="twocolumn2.html">Publications</a>
+										<a href="onecolumn.html">Contact</a>
+										<a href="threecolumn.html">CV</a>
 									</nav>
 								</header>
 
@@ -37,7 +37,7 @@
 				</div>
 
 			<!-- Banner -->
-				<div id="banner-wrapper">
+<!-- 				<div id="banner-wrapper">
 					<div class="container">
 
 						<div id="banner">
@@ -45,7 +45,7 @@
 						</div>
 
 					</div>
-				</div>
+				</div>--> 
 
 			<!-- Main -->
 				<div id="main">
