--- a/main.html
+++ b/main.html
@@ -21,13 +21,13 @@
 							<div class="col-12">
 
 								<header id="header">
-									<h1><a href="index.html" id="logo">Tianran Zhang</a></h1>
+									<h1><a href="main.html" id="logo">Tianran Zhang</a></h1>
 									<nav id="nav">
-										<a href="index.html" class="current-page-item">About me</a>
-										<a href="twocolumn1.html">Research</a>
-										<a href="twocolumn2.html">Publications</a>
-										<a href="onecolumn.html">Contact</a>
-										<a href="threecolumn.html">CV</a>
+										<a href="main.html" class="current-page-item">About me</a>
+										<a href="research.html">Research</a>
+										<a href="publication.html">Publications</a>
+										<a href="contact.html">Contact</a>
+										<a href="cv.html">CV</a>
 									</nav>
 								</header>
 
