--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 									<nav id="nav">
 										<a href="main.html" class="current-page-item">About me</a>
 										<a href="research.html">Research</a>
-										<a href="publication.html">Publications</a>
+										<a href="publications.html">Publications</a>
 										<a href="contact.html">Contact</a>
 										<a href="cv.html">CV</a>
 									</nav>
