--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,11 @@
 								<header id="header">
 									<h1><a href="index.html" id="logo">Minimaxing</a></h1>
 									<nav id="nav">
-										<a href="index.html">Homepage</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html" class="current-page-item">One Column</a>
-										<a href="threecolumn.html">Three Column</a>
+										<a href="main.html">About me</a>
+										<a href="research.html">Research</a>
+										<a href="publications.html">Publications</a>
+										<a href="contact.html" class="current-page-item">Contact</a>
+										<a href="cv.html">CV</a>
 									</nav>
 								</header>
 
