--- a/cv.html
+++ b/cv.html
@@ -21,13 +21,13 @@
 							<div class="col-12">
 
 								<header id="header">
-									<h1><a href="index.html" id="logo">Minimaxing</a></h1>
+									<h1><a href="index.html" id="logo">Tianran Zhang</a></h1>
 									<nav id="nav">
-										<a href="index.html">Homepage</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
-										<a href="threecolumn.html" class="current-page-item">Three Column</a>
+										<a href="main.html">About me</a>
+										<a href="research.html">Research</a>
+										<a href="publications.html">Publications</a>
+										<a href="contact.html">Contact</a>
+										<a href="cv.html" class="current-page-item">CV</a>
 									</nav>
 								</header>
 
