--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Two Column 1 - Minimaxing by HTML5 UP</title>
+		<title>Research</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,13 +21,13 @@
 							<div class="col-12">
 
 								<header id="header">
-									<h1><a href="index.html" id="logo">Minimaxing</a></h1>
+									<h1><a href="index.html" id="logo">Tianran Zhang</a></h1>
 									<nav id="nav">
-										<a href="index.html">Homepage</a>
-										<a href="twocolumn1.html" class="current-page-item">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
-										<a href="threecolumn.html">Three Column</a>
+										<a href="main.html">About me</a>
+										<a href="research.html" class="current-page-item">Research</a>
+										<a href="publications.html">Publications</a>
+										<a href="contact.html">Contact</a>
+										<a href="cv.html">CV</a>
 									</nav>
 								</header>
 
