--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
 							<div class="col-12">
 
 								<header id="header">
-									<h1><a href="index.html" id="logo">Tianran Zhang</a></h1>
+									<h1><a href="main.html" id="logo">Tianran Zhang</a></h1>
 									<nav id="nav">
 										<a href="main.html">About me</a>
 										<a href="research.html" class="current-page-item">Research</a>
