--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
 							<div class="col-12">
 
 								<header id="header">
-									<h1><a href="main.html" id="logo">Tianran Zhang</a></h1>
+									<h1><a href="index.html" id="logo">Tianran Zhang</a></h1>
 									<nav id="nav">
-										<a href="main.html">About me</a>
+										<a href="index.html">About me</a>
 										<a href="research.html">Research</a>
 										<a href="publications.html">Publications</a>
 										<a href="contact.html" class="current-page-item">Contact</a>
