--- a/index.html
+++ b/index.html
@@ -36,16 +36,6 @@
 					</div>
 				</div>
 
-			<!-- Banner -->
-<!-- 				<div id="banner-wrapper">
-					<div class="container">
-
-						<div id="banner">
-							<h2>Tianran Zhang</h2>
-						</div>
-
-					</div>
-				</div>--> 
 
 			<!-- Main -->
 				<div id="main">
@@ -54,12 +44,7 @@
 							<div class="col-4 col-12-medium">
 
 								<section>
-									<h2>Welcome to Minimaxing!</h2>
-									<p>This is <strong>Minimaxing</strong>, a fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> and released for free by <a href="http://html5up.net">HTML5 UP</a>. It features
-									a simple, lightweight design, solid HTML5 and CSS3 code, and full responsive support for desktop, tablet, and small displays.</p>
-									<footer class="controls">
-										<a href="http://html5up.net" class="button">More cool designs ...</a>
-									</footer>
+									<a href="#"><img src="images/pic2.jpg" alt="" class="middle" /></a>
 								</section>
 
 							</div>
