--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<div class="col-4 col-12-medium">
 
 								<section>
-									<a href="#"><img src="images/tianran zhang.jpg" alt="" class="top blog-post-image" width="200" /></a>
+									<a href="#"><img src="images/tianran zhang.jpg" alt="" class="left" width="100" /></a>
 								</section>
 
 							</div>
