--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
 								<section>
 									<p>I am a PhD candidate at the Department of Chemistry, The University of Hong Kong.
-									I work with my supervisor Dr. Yufeng Wang on creating complex yet architectually well-defined 
-									colloidal particels and other soft materials.</p>
+									I work with my supervisor Dr. Yufeng Wang on creating various colloidal particles and the complex yet 
+									architectually well-defined colloidal assemblies.</p>
 									<p>For more details of our group, please visit <a target="_blank" href="https://wanglab.hku.hk/">this website</a>.</p>
 								</section>
 
