--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>index</title>
+		<meta name="google-site-verification" content="Wo9RQwNUmLxFJXREGYfzzXqrbYwpT1AKxYEjHvbFmMM" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
